--- a/MazeGame/Views/LearnMore.html
+++ b/MazeGame/Views/LearnMore.html
@@ -10,7 +10,7 @@
     
     <div class="navigationbar"></div>
 
-    <div class="w3-container w3-padding-32 w3-center" style="margin-left: 200px; margin-right: 200px">
+    <div id="contDiv" class="w3-container w3-padding-32 w3-center">
         <div class="w3-container w3-black"><h1 class="w3-wide">About</h1></div>
         <div class="w3-container w3-light-gray">
             <div class="w3-padding-32">
@@ -29,6 +29,7 @@
     <script src="../Scripts/navbar.js"></script>
     <link href="../Scripts/css/W3.css" rel="stylesheet" />
     <link href="../Scripts/css/navbar.css" rel="stylesheet">
+    <link href="../Scripts/css/learnMore.css" rel="stylesheet"/>
 
 </body>
 </html>
