--- a/MazeGame/Views/Login.html
+++ b/MazeGame/Views/Login.html
@@ -14,7 +14,7 @@
 
     <div class="w3-display-container w3-padding-32">
 
-        <div class="w3-container w3-center w3-display-middle" style="width: 50%; height: 50%">
+        <div id="contDiv" class="w3-container w3-center w3-display-middle">
             <div class="w3-container w3-black"><h1>Log in</h1></div>
             <div class="w3-container"><h3>Use a local account to log in.</h3></div>
             
@@ -48,6 +48,7 @@
 <link href="../Scripts/css/navbar.css" rel="stylesheet">
 <script src="../Scripts/knockout-3.4.2.js"></script>
 <script src="../Scripts/userLog.js"></script>
+<link href="../Scripts/css/login.css" rel="stylesheet"/>
 
 </body>
 </html>
