--- a/MazeGame/Views/Register.html
+++ b/MazeGame/Views/Register.html
@@ -13,7 +13,7 @@
         <div class="navigationbar"></div>
 
         <div class="w3-display-container w3-padding-32">
-            <div class="w3-card-4 w3-center w3-display-middle" style="width: 40%; height: 50%">
+            <div id="contDiv" class="w3-card-4 w3-center w3-display-middle">
 
                 <div class="w3-container w3-black"><h1>Register</h1></div>
 
@@ -54,6 +54,7 @@
 <link href="../Scripts/css/navbar.css" rel="stylesheet">
 <script src="../Scripts/knockout-3.4.2.js"></script>
 <script src="../Scripts/userLog.js"></script>
+<link href="../Scripts/css/register.css" rel="stylesheet"/>
 
 </body>
 </html>
