--- a/MazeGame/Views/SinglePlayerPage.html
+++ b/MazeGame/Views/SinglePlayerPage.html
@@ -55,7 +55,7 @@
             </fieldset>
         </div>
         <div id="contDivBig">
-            <canvas id="myCanvas" tabindex="1" class="maze-board"></canvas>
+            <canvas id="myCanvas" tabindex="1" class="maze-board" width="500" height="500"></canvas>
         </div>
     </div>
 
