select title fixed

--- a/MazeGame/Views/MultiPlayerPage.html
+++ b/MazeGame/Views/MultiPlayerPage.html
@@ -19,7 +19,7 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 <div class="dropdown" id="dropdown-games">
-                    <select class="btn btn-default dropdown-toggle" type="button" id="dropdown" data-toggle="dropdown">
+                    <select id="dropdown" data-toggle="dropdown">
                         <option selected disabled>Games &dArr;</option>
                     </select>
                 </div>
